background fixed on scroll in hero banner, feaures and blog section, z-index on header to be on top

--- a/brief-1/styles/sass/index.scss
+++ b/brief-1/styles/sass/index.scss
@@ -133,6 +133,7 @@ header.active {
 }
 
 header {
+  z-index: 20;
   position: fixed;
   width: 100vw;
   display: flex;
@@ -207,6 +208,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -276,11 +278,13 @@ header {
   background-image: url("../../assets/about-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 3rem;
   padding: 3rem 1rem;
   color: white;
+  height: 100vh;
 
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     grid-template-columns: repeat(2, 1fr);
@@ -400,6 +404,7 @@ header {
   background-image: url(../../assets/blog-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   color: white;
 
   @media screen and (min-width: 640px) {
